# financial-news-agent

./: .env.example  .gitignore  CLAUDE.md  QUICKSTART_API.md  README.md  debug_sources.py  pyproject.toml  results.json  test_agent.py
.claude/: README.md
.claude/rules/: README.md  dependency-management.md  development-scripts.md  documentation-organization.md
.dev_docs/: README.md  harness_optimization_summary.md
.dev_docs/plan/: README.md  agent-performance-evaluation.md  optimization_iteration_1.md
.dev_docs/summary/: README.md  api-test-results.md  citation-numbering-fix.md  citation-system-implementation.md  citation-validation-implementation.md  code-comments-enhancement-2026-05-24.md  context-window-management-implementation.md  documentation-cleanup-2026-05-24.md  documentation-drift-fix-260527.md  documentation-update.md  dynamic-ticker-lookup.md  fastapi-implementation.md  finnhub-integration.md  retry-mechanism-changes.md  retry-mechanism.md  streaming-implementation.md  timing-instrumentation-implementation.md
.dev_process/: README.md  check_setup.py  test_agent.py  test_e2e_context.py  test_finnhub.py  test_full_agent.py  test_manual_context.py  test_symbol_search.py
.github/workflows/: tests.yml
docs/: README.md  api-reference.md  architecture.md  configuration.md  implementation.md  task.md
docs/guides/: README.md  adding-news-sources.md
financial_news_agent/: README.md  __init__.py  __main__.py  agent.py  api_server.py  citation_validator.py  config.py  context_manager.py  evaluator.py  news_tool.py  retry_manager.py  traceability.py  types.py  utils.py
financial_news_agent/agent/: README.md  __init__.py  prompts.py  query_rewriter.py  shared.py  streaming.py  sync.py
financial_news_agent/api/: __init__.py  main.py  models.py  routes.py  session_manager.py
financial_news_agent/news_sources/: __init__.py  base.py  finnhub.py  marketaux.py  newsapi.py
frontend/: README_FRONTEND.md  TESTING_CHECKLIST.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  verify.sh
frontend/src/: App.tsx  index.css
frontend/src/types/: api.ts  (+2 more)
tests/: README.md  __init__.py  conftest.py  test_api.py  test_citation_validator.py  test_context_manager.py  test_integration.py  test_news_tool.py  test_retry_manager.py  test_shared.py  test_ticker_extraction.py  test_timing.py  test_utils.py
(+33 files in other folders)
